[tool.poetry]
name = "dataflow-playground"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak"]

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = {extras = ["gcp"], version = "^2.43.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.6"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
